[package]
name = "ftrace-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# object = "0.26.2"
# TODO: Object::File::kind is not yet released
object = { git = "https://github.com/gimli-rs/object" }
gimli = "0.25"
ddbug_parser = "0.3"
nix = "^0.22"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"
capstone = { path="../capstone-rs/capstone-rs/" }
rustc-demangle = "0.1"
cpp_demangle = "0.3.3"
